# MatchingEngine

./: .gitignore  AVLTable.cpp  AVLTable.h  BuyOrderBook.cpp  BuyOrderBook.h  CMakeLists.txt  FileReader.cpp  FileReader.h  MapTable.cpp  MapTable.h  OrderBook.cpp  OrderBook.h  OrderContainer.cpp  OrderContainer.h  OrderPoint.cpp  OrderPoint.h  OrderTable.cpp  OrderTable.h  README.md  STLmapTable.cpp  STLmapTable.h  SellOrderBook.cpp  SellOrderBook.h  TableRow.cpp  TableRow.h  Transaction.cpp  Transaction.h  TransactionLog.cpp  TransactionLog.h  cliinput.h  header.h  main.cpp  orderparser.cpp  orderparser.h  orders.txt
cmake-build/: CMakeCache.txt  Case3.1.txt  Makefile  Ordermatching  cmake_install.cmake
orders/: BOKL.txt  EDBL.txt  GFCLPO.txt  orders.txt
transactions/: BOKL.txt  EDBL.txt  GFCLPO.txt
